fix: Rewrite JSONObject for ES2024 compliance — fix 51 test262 JSON failures including stringify proxy/circular/surrogate/wrapper handling, parse reviver context.source tracking, rawJSON/isRawJSON, and proper error propagation